A big refactoring, not a Next.js app only =========================================
Let's generate some new content with additional tools.

I use graphviz for generating figures for this site. This leads me to
think this project as a wider thing, with different folders to separate
contents who don't share the same nature nor build process.

Some build script might appear and be called from github actions
workflows.

--- a/nextapp/package.json
+++ b/nextapp/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fluentui/react": "^8.104.7",
+    "@fluentui/utilities": "^8.13.5",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "google-spreadsheet": "^3.3.0",
     "leaflet": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-leaflet": "^4.0.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "tabletop": "^1.6.3"
   },
   "devDependencies": {
