--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -5,9 +5,10 @@
 name: Deploy Next.js site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: 
+      - "build/*/*"
+      - "master"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,6 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Detect package manager
+        working-directory: nextapp/
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
@@ -64,20 +66,25 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            .next/cache
+            nextapp/.next/cache
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
+        working-directory: nextapp/
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
+        working-directory: nextapp/
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Static HTML export with Next.js
+        working-directory: nextapp/
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
+          
       - name: Prepare data
         run: |
+          mv nextapp/out .
           curl   -H "Accept: application/vnd.github+json" \
           -H "Authentication: Bearer $GITHUB_TOKEN" https://api.github.com/repos/nka11/nka11.github.com/commits > out/commits.json
       - name: Upload artifact
