--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
+  "name": "nicolas-karageuzian",
+  "type": "module",
+  "version": "0.0.0",
+  "private": true,
+  "packageManager": "pnpm@9.15.0",
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.8.1",
+    "@sveltejs/vite-plugin-svelte": "^4.0.1",
+    "@sveltepress/theme-default": "^6.0.4",
+    "@sveltepress/vite": "^1.2.2",
+    "@types/node": "^20.11.20",
+    "svelte": "^5.0.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
+  },
   "dependencies": {
-    "react-vis-timeline": "^2.0.3",
-    "react-visjs-timeline": "^1.6.0"
+    "oxigraph": "^0.4.11"
   }
 }
