--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.1",
     "@sveltepress/vite": "^1.2.2",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20.11.20",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
@@ -26,6 +27,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "jsonld-streaming-serializer": "^4.0.0",
     "jspdf": "^3.0.1",
     "mdsvex": "^0.12.6",
